<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>test_cli_remapping</name>
  <version>0.4.0</version>
  <description>
    Test command line remapping of topic names, service names, node namespace, and node name.
  </description>
  <maintainer email="sloretz@openrobotics.org">Shane Loretz</maintainer>
  <license>Apache License 2.0</license>

  <build_depend>test_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>ament_cmake</build_depend>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>test_msgs</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>rclcpp</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>test_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
